Add missing class

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           </ul>
         </nav>
       </header>
-      <main class="[ fx-auto ]" role="main">
+      <main class="[ fx-auto mx--1 ]" role="main">
         <form>
           <div id="settings" class="[ router ] [ stack ]">
             <div class="grid">
