--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
     <link rel="canonical" href="https://stevecherry.net/soundfont/" />
     <link
       rel="stylesheet"
-      href="https://stevecherry.net/normcore/normcore.css"
+      href="https://stevecherry.net/normcore/css/normcore.css"
     />
     <link rel="stylesheet" href="./public/style.css" />
+    <script
+      src="https://stevecherry.net/normcore/js/normcore.js"
+      defer
+    ></script>
     <script src="./public/script.js" type="module"></script>
   </head>
   <body>
@@ -286,7 +290,7 @@
                         step="0.001"
                         value="0"
                       />
-                      <output for="envelope-attack">0</output>
+                      <output is="output-sync" for="envelope-attack">0</output>
                     </div>
                   </div>
                   <div class="field">
@@ -301,7 +305,7 @@
                         step="0.001"
                         value="0.2"
                       />
-                      <output for="envelope-decay">0.2</output>
+                      <output is="output-sync" for="envelope-decay">0.2</output>
                     </div>
                   </div>
                   <div class="field">
@@ -316,7 +320,9 @@
                         step="0.001"
                         value="0.8"
                       />
-                      <output for="envelope-sustain">0.8</output>
+                      <output is="output-sync" for="envelope-sustain"
+                        >0.8</output
+                      >
                     </div>
                   </div>
                   <div class="field">
@@ -331,7 +337,9 @@
                         step="0.001"
                         value="0.8"
                       />
-                      <output for="envelope-release">0.8</output>
+                      <output is="output-sync" for="envelope-release"
+                        >0.8</output
+                      >
                     </div>
                   </div>
                 </div>
