--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     />
     <link rel="stylesheet" href="./public/style.css" />
     <script
+      src="https://cdn.jsdelivr.net/npm/@ungap/custom-elements@1.3.0/es.js"
+      defer
+    ></script>
+    <script
       src="https://stevecherry.net/normcore/js/normcore.js"
       defer
     ></script>
