Use normcore for router view

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </header>
       <main class="[ fx-auto mx--1 ]" role="main">
         <form>
-          <div id="settings" class="[ router ] [ stack ]">
+          <div id="settings" class="stack view">
             <div class="grid">
               <fieldset>
                 <legend>Soundfont</legend>
@@ -350,7 +350,7 @@
               </fieldset>
             </div>
           </div>
-          <div id="index" class="[ router ] [ stack ]">
+          <div id="index" class="stack view">
             <div class="[ stack ] [ border p--1 ]">
               <label for="octave">Octave</label>
               <select id="octave" name="octave" value="4">
