Update cover component

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <script src="./public/script.js" type="module"></script>
   </head>
   <body>
-    <div class="cover">
+    <div class="cover stack">
       <header class="[ cluster ] [ border-b p--1 ]" role="banner">
         <h1 class="fx-auto">Soundfont</h1>
         <nav role="navigation">
@@ -37,7 +37,7 @@
           </ul>
         </nav>
       </header>
-      <main class="[ fx-auto mx--1 ]" role="main">
+      <main class="[ cover-start ] [ mx--1 ]" role="main">
         <form>
           <div id="settings" class="stack view">
             <div class="grid">
